Reworded open source disclaimer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,6 @@
 			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.herokuapp.com/get?stop=2000
 		</li>
 	</ul>
-	<h3>This application is open source. You should view the code on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</h3>
+	<h3>This is an open source application. You should view the code on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</h3>
 </body>
 </html>
