--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,12 @@
 			font-family: Helvetica, Arial, sans-serif;
 		}
 	</style>
+	<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+	typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,
+	e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+	mixpanel.init("e0c01d55a08fa5711c962d514365f5a0");</script><!-- end Mixpanel -->
 </head>
-<body>
+<body onload="mixpanel.track('Page View', {'Page Name': document.title, 'URL': window.location.href})">
 	<h1>NextRide</h1>
 	<h3>Correct usage of this API:</h3>
 	<ul>
