Update links to alykhan.com instead of herokuapp.com.

--- a/templates/bad_request.html
+++ b/templates/bad_request.html
@@ -14,7 +14,7 @@
 	<h3>Correct usage of this API:</h3>
 	<ul>
 		<li>
-			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.herokuapp.com/get?stop=2000
+			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.alykhan.com/get?stop=2000
 		</li>
 	</ul>
 </body>
