--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 	<h3>Correct usage of this API:</h3>
 	<ul>
 		<li>
-			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.herokuapp.com/get?stop=2000
+			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.alykhan.com/get?stop=2000
 		</li>
 	</ul>
 	<h3>This is an open source application. You should view the code on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</h3>
