--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
 			text-align: center;
 		}
 	</style>
+	<link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="{{ url_for('static', filename='img/apple-touch-icon-precomposed.png') }}" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 	<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
