Disable AJAX loading for link to example API usage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 			<h2>Correct usage of this API:</h2>
 			<ul>
 				<li>
-					Access the 'api' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/api?stop=2000">http://nextride.alykhan.com/api?stop=2000</a>
+					Access the 'api' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/api?stop=2000" data-ajax="false">http://nextride.alykhan.com/api?stop=2000</a>
 				</li>
 			</ul>
 		</div><!-- content -->
