Add link to API Demo on homepage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,16 @@
 		</div><!-- header -->
 		<div data-role="content">
 			<p id="description">This is an open source application available on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</p>
-			<h2>Correct usage of this API:</h2>
+			<h2>API Usage:</h2>
 			<ul>
 				<li>
 					Access the 'api' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/api?stop=2000" data-ajax="false">http://nextride.alykhan.com/api?stop=2000</a>
+				</li>
+			</ul>
+			<h2>API Demo:</h2>
+			<ul>
+				<li>
+					Access the 'm' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/m?stop=2000" data-ajax="false">http://nextride.alykhan.com/m?stop=2000</a>
 				</li>
 			</ul>
 		</div><!-- content -->
