Make Usage and Demo endpoint URLs relative

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
 			<h2>API Usage:</h2>
 			<ul>
 				<li>
-					Access the 'api' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/api?stop=2000" data-ajax="false">http://nextride.alykhan.com/api?stop=2000</a>
+					Access the 'api' endpoint with a stop encoded as a query parameter: <a href="/api?stop=2000" data-ajax="false">/api?stop=2000</a>
 				</li>
 			</ul>
 			<h2>API Demo:</h2>
 			<ul>
 				<li>
-					Access the 'm' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/m?stop=2000" data-ajax="false">http://nextride.alykhan.com/m?stop=2000</a>
+					Access the 'm' endpoint with a stop encoded as a query parameter: <a href="/m?stop=2000" data-ajax="false">/m?stop=2000</a>
 				</li>
 			</ul>
 		</div><!-- content -->
